Fixes slow rendering because of fixed position on background image with backstretch plugin

--- a/css/styles.less
+++ b/css/styles.less
@@ -19,11 +19,11 @@
 
 * {
 	//border: 1px solid green;
-	transition: all 0.5s ease;
+	//transition: all 0.5s ease;
 }
 
 html {
-	background: lightgrey;
+	//background: lightgrey;
 	-webkit-font-smoothing: antialiased;
 }
 
@@ -58,6 +58,7 @@ html {
 .intro-section {
 
 	border-bottom: 1rem solid black;
+	background-color: white;
 	
 	.container {
 		height: 46rem;
@@ -86,7 +87,7 @@ html {
 }
 
 .main-section {
-	background: url('../images/city-bg-lq.jpg') no-repeat fixed center;
+	//background: url('../images/city-bg-lq.jpg') no-repeat fixed center;
 	background-size: cover;
 	border-top: 10px solid @my-redorange;
 	border-bottom: 10px solid @my-redorange;
